workspace = { members = ["bin"] }
[package]
name = "oxag_ai_j"
version = "0.1.0"
edition = "2021"
authors = ["Giulio Pimenoff Verdolin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = {version = "0.1.21", registry = "kellnr"}
worldgen_unwrap = { version = "0.1.3", registry = "kellnr" }
bob_lib = { version = "0.1.2", registry = "kellnr" }
ghost_journey_journal = { version = "0.1.1", registry = "kellnr" }
resource-scanner-tool = { version = "1.0.0", registry = "kellnr" }
OwnerSheeps_Sound_Tool = { version = "0.1.0", registry = "kellnr" }
# These two below
charting_tools = { version = "1.0.7", registry = "kellnr" }
AStar_conRUSTulazioni = { version = "0.1.0", registry = "kellnr" }
priority-queue = "1.4.0"
